Kubernetes/3.canary/5-istio-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: bff-virtualservice
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway-configuration
  http:
  - match:
    - uri:
        prefix: "/api"
    route:
    - destination:
        host: service-bff.default.svc.cluster.local
        subset: canary-group
      weight: 90
    - destination:
        host: service-bff.default.svc.cluster.local
        subset: bodge-group
      weight: 10
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: bff-destination-rule
  namespace: default
spec:
  host: service-bff
  subsets:
  - name: canary-group
    labels:
      version: canary
  - name: bodge-group
    labels:
      version: bodge #Versión "estable"
